Create route and new page implemented

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,15 @@
     </head>
     <body>
         <h1>All Bikes:</h1>
-
+        <ul>
+            <% for(let i = 0; i < bikes.length; i++){ %>
+                <li>
+                  <a href="/bikes/<%=bikes[i].id%>"><%=bikes[i].name%></a>
+                </li>
+            <% } %>    
+        </ul>
+        <nav>
+            <a href="/bikes/new">Create a New Bike</a>
+        </nav>
     </body>
 </html>
