links added to landing page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-    <h1>Bikes Home Page</h1>
+    <h1>Bikes Database:</h1>
+
+    <a href="/bikes">Click Here To See All Bikes In Database</a> <br>
+    <a href="/bikes/new>">Click Here To Add A New Bike To The Database</a>
     
 </body>
 </html>
