--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,7 +11,7 @@
     <h1>Bikes Database:</h1>
 
     <a href="/bikes">Click Here To See All Bikes In Database</a> <br>
-    <a href="/bikes/new>">Click Here To Add A New Bike To The Database</a>
+    <a href="/bikes/new">Click Here To Add A New Bike To The Database</a>
     
 </body>
 </html>
