--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,6 +6,11 @@
 <body>
   <h1>Bike Show Page:</h1>
   Name: <%= bike.name %> <br>
-  Type: <%= bike.type%>
+  Type: <%= bike.type%> <br>
+
+  <button><a href="/bikes/<%=bike.id%>/edit">Edit/Delete</a></button> <br>
+  <a href="/bikes">Click Here To See All Bikes In Database</a> <br>
+
+
 </body>
 </html>
