--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,5 +18,8 @@
         <nav>
             <a href="/bikes/new">Create a New Bike</a>
         </nav>
+        <nav>
+            <a href="/">Return To Bikes Database Homepage</a>
+        </nav>
     </body>
 </html>
